[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://src/enemy/scanner_lookout.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/enemy/enemy_ship.gd" type="Script" id=3]
[ext_resource path="res://assets/enemy_sunk.png" type="Texture" id=4]
[ext_resource path="res://src/Shader/Dive/mask_enemy.png" type="Texture" id=5]
[ext_resource path="res://src/Shader/Dive/enemy_dive.tres" type="Shader" id=6]
[ext_resource path="res://src/character/moving_particles.tscn" type="PackedScene" id=7]

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/is_sinking = false
shader_param/progress = 0.0
shader_param/mask_texture = ExtResource( 5 )
shader_param/sprite_down = ExtResource( 4 )

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.535484, 1 )
colors = PoolColorArray( 0, 0.76349, 0.873535, 1, 0, 0.764706, 0.87451, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=7]
resource_local_to_scene = true
lifetime_randomness = 0.3
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 10.0
scale_random = 0.5
color_ramp = SubResource( 2 )

[sub_resource type="CapsuleShape2D" id=4]
resource_local_to_scene = true
radius = 93.0
height = 412.0

[sub_resource type="CircleShape2D" id=8]
resource_local_to_scene = true
radius = 500.0

[sub_resource type="CircleShape2D" id=3]
resource_local_to_scene = true
radius = 1000.0

[sub_resource type="CircleShape2D" id=5]
radius = 1920.0

[node name="EnemyShip" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )
scanner_scene = ExtResource( 2 )

[node name="MoveTimer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="MovingParticles" parent="Sprite" instance=ExtResource( 7 )]
position = Vector2( 0, -282 )
amount = 500
lifetime = 5.0
visibility_rect = Rect2( -960, -540, 1920, 1080 )
process_material = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
disabled = true

[node name="LootCheckOut" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LootCheckOut"]
shape = SubResource( 8 )

[node name="LootLabelBackground" type="PanelContainer" parent="."]
margin_left = -7.0
margin_top = -77.0
margin_right = 7.0
margin_bottom = -49.0
grow_horizontal = 2

[node name="LootLabel" type="Label" parent="LootLabelBackground"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 21.0

[node name="OtherEnemyCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="OtherEnemyCheck"]
shape = SubResource( 3 )

[node name="SpawnCheck" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnCheck"]
shape = SubResource( 5 )

[connection signal="body_entered" from="LootCheckOut" to="." method="_on_LootCheckOut_body_entered"]
[connection signal="body_exited" from="LootCheckOut" to="." method="_on_LootCheckOut_body_exited"]
[connection signal="body_entered" from="OtherEnemyCheck" to="." method="_on_OtherEnemyCheck_body_entered"]
